fix: fixed crash on List.getFirst() -> List.get(0)
Signed-off-by: Fireflasher <fireflasher@proton.me>